spec/e2e/call/bool.lit
true(); # error: [line 1] Runtime error: Can only call functions and types.
